# video_gem

./: .env  README.md  main.py  pyproject.toml  requirements.txt
output/previewprotest_20250528_060708/: previewprotest_20250528_060708_clean.txt  previewprotest_20250528_060708_raw.txt
output/previewprotest_20250528_063512/: previewprotest_20250528_063512_clean.txt  previewprotest_20250528_063512_raw.txt
output/previewprotest_20250528_065918/: previewprotest_20250528_065918_clean.txt  previewprotest_20250528_065918_raw.txt
output/previewprotest_20250528_070948/: previewprotest_20250528_070948_clean.txt  previewprotest_20250528_070948_raw.txt
